# scripthash

./: .env.example  Cargo.toml  ethereum_transactions-15_05_2023.txt
src/: main.rs
