[package]
name = "scripthash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.8", features = ["ws", "ipc"] }
ethers-providers = "2.0.8"
futures = "0.3"
tokio = { version = "1.24.1", features = ["full"] }
chrono = "0.4.23"
serde_json = "1.0.91"
tokio-tungstenite = "0.19.0"
dotenv = "0.15.0"
